// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FormElement /> Should hide placeholder with hasValue 1`] = `
<FormElement
  className=""
  errorText=""
  hasPlaceholder={true}
  hasUnderline={true}
  hasValue={true}
  htmlFor="test-input"
  isFocused={false}
  label=""
  placeholder=""
  translateErrorText={true}
>
  <div
    className="css-1vjh8yv"
  >
    <Placeholder
      aria-hidden={true}
      placeholder=""
      visible={false}
    >
      <div
        aria-hidden={true}
        className="css-rkuo1o css-1jyyyen"
      >
        <Translate
          className=""
          params={Object {}}
          role={null}
          string=""
        />
      </div>
    </Placeholder>
    <Label
      hasErrorMessage={false}
      htmlFor="test-input"
      isFloating={true}
      isFocused={false}
      label=""
    >
      <label
        className="css-1nn9zl4 css-1r91c0g css-1jyyyen"
        htmlFor="test-input"
      >
        <Translate
          className=""
          params={Object {}}
          role={null}
          string=""
        />
      </label>
    </Label>
    <Underline
      hasErrorMessage={false}
      isFocused={false}
    >
      <div
        className="css-ycal4l"
      >
        <div
          className="css-1tpmuef"
          style={
            Object {
              "borderBottomColor": undefined,
              "transform": "scale3d(0,1,1)",
            }
          }
        />
      </div>
    </Underline>
    <ErrorText
      className={null}
      errorText=""
      translate={true}
    >
      <div
        className="css-hyvrm8"
      >
        <Translate
          className=""
          params={Object {}}
          role={null}
          string=""
        />
      </div>
    </ErrorText>
  </div>
</FormElement>
`;

exports[`<FormElement /> should render a focused form element 1`] = `
<FormElement
  className=""
  errorText=""
  hasPlaceholder={true}
  hasUnderline={true}
  hasValue={false}
  htmlFor="test-input"
  isFocused={true}
  label=""
  placeholder=""
  translateErrorText={true}
>
  <div
    className="css-1vjh8yv"
  >
    <Placeholder
      aria-hidden={true}
      placeholder=""
      visible={false}
    >
      <div
        aria-hidden={true}
        className="css-rkuo1o css-1jyyyen"
      >
        <Translate
          className=""
          params={Object {}}
          role={null}
          string=""
        />
      </div>
    </Placeholder>
    <Label
      hasErrorMessage={false}
      htmlFor="test-input"
      isFloating={true}
      isFocused={true}
      label=""
    >
      <label
        className="css-1nn9zl4 css-1r91c0g css-nil"
        htmlFor="test-input"
      >
        <Translate
          className=""
          params={Object {}}
          role={null}
          string=""
        />
      </label>
    </Label>
    <Underline
      hasErrorMessage={false}
      isFocused={true}
    >
      <div
        className="css-ycal4l"
      >
        <div
          className="css-1tpmuef"
          style={
            Object {
              "borderBottomColor": undefined,
            }
          }
        />
      </div>
    </Underline>
    <ErrorText
      className={null}
      errorText=""
      translate={true}
    >
      <div
        className="css-hyvrm8"
      >
        <Translate
          className=""
          params={Object {}}
          role={null}
          string=""
        />
      </div>
    </ErrorText>
  </div>
</FormElement>
`;

exports[`<FormElement /> should render a form element with 1 child 1`] = `
<FormElement
  className=""
  errorText=""
  hasPlaceholder={true}
  hasUnderline={true}
  hasValue={false}
  htmlFor="test-input"
  isFocused={false}
  label=""
  placeholder=""
  translateErrorText={true}
>
  <div
    className="css-1vjh8yv"
  >
    <Placeholder
      aria-hidden={true}
      placeholder=""
      visible={true}
    >
      <div
        aria-hidden={true}
        className="css-rkuo1o"
      >
        <Translate
          className=""
          params={Object {}}
          role={null}
          string=""
        />
      </div>
    </Placeholder>
    <Label
      hasErrorMessage={false}
      htmlFor="test-input"
      isFloating={false}
      isFocused={false}
      label=""
    >
      <label
        className="css-1nn9zl4 css-1jyyyen"
        htmlFor="test-input"
      >
        <Translate
          className=""
          params={Object {}}
          role={null}
          string=""
        />
      </label>
    </Label>
    <input
      key="test-key"
    />
    <Underline
      hasErrorMessage={false}
      isFocused={false}
    >
      <div
        className="css-ycal4l"
      >
        <div
          className="css-1tpmuef"
          style={
            Object {
              "borderBottomColor": undefined,
              "transform": "scale3d(0,1,1)",
            }
          }
        />
      </div>
    </Underline>
    <ErrorText
      className={null}
      errorText=""
      translate={true}
    >
      <div
        className="css-hyvrm8"
      >
        <Translate
          className=""
          params={Object {}}
          role={null}
          string=""
        />
      </div>
    </ErrorText>
  </div>
</FormElement>
`;

exports[`<FormElement /> should render a form element with no children 1`] = `
<FormElement
  className=""
  errorText=""
  hasPlaceholder={true}
  hasUnderline={true}
  hasValue={false}
  htmlFor="test-input"
  isFocused={false}
  label=""
  placeholder=""
  translateErrorText={true}
>
  <div
    className="css-1vjh8yv"
  >
    <Placeholder
      aria-hidden={true}
      placeholder=""
      visible={true}
    >
      <div
        aria-hidden={true}
        className="css-rkuo1o"
      >
        <Translate
          className=""
          params={Object {}}
          role={null}
          string=""
        />
      </div>
    </Placeholder>
    <Label
      hasErrorMessage={false}
      htmlFor="test-input"
      isFloating={false}
      isFocused={false}
      label=""
    >
      <label
        className="css-1nn9zl4 css-1jyyyen"
        htmlFor="test-input"
      >
        <Translate
          className=""
          params={Object {}}
          role={null}
          string=""
        />
      </label>
    </Label>
    <Underline
      hasErrorMessage={false}
      isFocused={false}
    >
      <div
        className="css-ycal4l"
      >
        <div
          className="css-1tpmuef"
          style={
            Object {
              "borderBottomColor": undefined,
              "transform": "scale3d(0,1,1)",
            }
          }
        />
      </div>
    </Underline>
    <ErrorText
      className={null}
      errorText=""
      translate={true}
    >
      <div
        className="css-hyvrm8"
      >
        <Translate
          className=""
          params={Object {}}
          role={null}
          string=""
        />
      </div>
    </ErrorText>
  </div>
</FormElement>
`;

exports[`<FormElement /> should show the error message 1`] = `
<FormElement
  className=""
  errorText="The error text"
  hasPlaceholder={true}
  hasUnderline={true}
  hasValue={false}
  htmlFor="test-input"
  isFocused={false}
  label=""
  placeholder=""
  translateErrorText={true}
>
  <div
    className="css-1vjh8yv"
  >
    <Placeholder
      aria-hidden={true}
      placeholder=""
      visible={true}
    >
      <div
        aria-hidden={true}
        className="css-rkuo1o"
      >
        <Translate
          className=""
          params={Object {}}
          role={null}
          string=""
        />
      </div>
    </Placeholder>
    <Label
      hasErrorMessage={true}
      htmlFor="test-input"
      isFloating={false}
      isFocused={false}
      label=""
    >
      <label
        className="css-1nn9zl4 css-1jyyyen"
        htmlFor="test-input"
      >
        <Translate
          className=""
          params={Object {}}
          role={null}
          string=""
        />
      </label>
    </Label>
    <Underline
      hasErrorMessage={true}
      isFocused={false}
    >
      <div
        className="css-ycal4l"
      >
        <div
          className="css-1tpmuef"
          style={
            Object {
              "borderBottomColor": "#ff0000",
            }
          }
        />
      </div>
    </Underline>
    <ErrorText
      className={null}
      errorText="The error text"
      translate={true}
    >
      <div
        className="css-hyvrm8"
      >
        <Translate
          className=""
          params={Object {}}
          role={null}
          string="The error text"
        >
          <span
            className=""
            role={null}
          >
            The error text
          </span>
        </Translate>
      </div>
    </ErrorText>
  </div>
</FormElement>
`;

exports[`<FormElement /> should show the label 1`] = `
<FormElement
  className=""
  errorText=""
  hasPlaceholder={true}
  hasUnderline={true}
  hasValue={false}
  htmlFor="test-input"
  isFocused={false}
  label="The label"
  placeholder=""
  translateErrorText={true}
>
  <div
    className="css-1vjh8yv"
  >
    <Placeholder
      aria-hidden={true}
      placeholder="The label"
      visible={true}
    >
      <div
        aria-hidden={true}
        className="css-rkuo1o"
      >
        <Translate
          className=""
          params={Object {}}
          role={null}
          string="The label"
        >
          <span
            className=""
            role={null}
          >
            The label
          </span>
        </Translate>
      </div>
    </Placeholder>
    <Label
      hasErrorMessage={false}
      htmlFor="test-input"
      isFloating={false}
      isFocused={false}
      label="The label"
    >
      <label
        className="css-1nn9zl4 css-1jyyyen"
        htmlFor="test-input"
      >
        <Translate
          className=""
          params={Object {}}
          role={null}
          string="The label"
        >
          <span
            className=""
            role={null}
          >
            The label
          </span>
        </Translate>
      </label>
    </Label>
    <Underline
      hasErrorMessage={false}
      isFocused={false}
    >
      <div
        className="css-ycal4l"
      >
        <div
          className="css-1tpmuef"
          style={
            Object {
              "borderBottomColor": undefined,
              "transform": "scale3d(0,1,1)",
            }
          }
        />
      </div>
    </Underline>
    <ErrorText
      className={null}
      errorText=""
      translate={true}
    >
      <div
        className="css-hyvrm8"
      >
        <Translate
          className=""
          params={Object {}}
          role={null}
          string=""
        />
      </div>
    </ErrorText>
  </div>
</FormElement>
`;

exports[`<FormElement /> should show the placeholder text 1`] = `
<FormElement
  className=""
  errorText=""
  hasPlaceholder={true}
  hasUnderline={true}
  hasValue={false}
  htmlFor="test-input"
  isFocused={false}
  label=""
  placeholder="The placeholder"
  translateErrorText={true}
>
  <div
    className="css-1vjh8yv"
  >
    <Placeholder
      aria-hidden={true}
      placeholder="The placeholder"
      visible={true}
    >
      <div
        aria-hidden={true}
        className="css-rkuo1o"
      >
        <Translate
          className=""
          params={Object {}}
          role={null}
          string="The placeholder"
        >
          <span
            className=""
            role={null}
          >
            The placeholder
          </span>
        </Translate>
      </div>
    </Placeholder>
    <Label
      hasErrorMessage={false}
      htmlFor="test-input"
      isFloating={false}
      isFocused={false}
      label=""
    >
      <label
        className="css-1nn9zl4 css-1jyyyen"
        htmlFor="test-input"
      >
        <Translate
          className=""
          params={Object {}}
          role={null}
          string=""
        />
      </label>
    </Label>
    <Underline
      hasErrorMessage={false}
      isFocused={false}
    >
      <div
        className="css-ycal4l"
      >
        <div
          className="css-1tpmuef"
          style={
            Object {
              "borderBottomColor": undefined,
              "transform": "scale3d(0,1,1)",
            }
          }
        />
      </div>
    </Underline>
    <ErrorText
      className={null}
      errorText=""
      translate={true}
    >
      <div
        className="css-hyvrm8"
      >
        <Translate
          className=""
          params={Object {}}
          role={null}
          string=""
        />
      </div>
    </ErrorText>
  </div>
</FormElement>
`;
